# agentscope-samples

./: .all-contributorsrc  .gitignore  CONTRIBUTING.md  CONTRIBUTING_zh.md  README.md  README_zh.md
alias/: .env.example  .gitignore  pyproject.toml
alias/docs/: data_science.md  financial_analysis.md  qa_agent.md
alias/frontend/: .env.example  postcss.config.cjs  tailwind.config.cjs  vite.config.ts
alias/frontend/src/: App.tsx  main.tsx
alias/frontend/src/assets/json/: prompt.ts
alias/frontend/src/components/AgentscopeLogoIcon/: index.tsx
alias/frontend/src/components/AliasLogoIcon/: index.tsx
alias/frontend/src/components/Artifacts/: PanelHeader.tsx  Tree.scss  Tree.tsx  index.module.scss  index.scss  index.tsx
alias/frontend/src/components/Browser/: index.tsx
alias/frontend/src/components/Chat/: BaseMessage.tsx  ClarificationMessage.tsx  CollapsibleMessage.tsx  FileItems.tsx  FilesMessage.tsx  Message.module.scss  Message.tsx  MessageList.module.scss  MessageList.tsx  ResponseMessage.tsx  SubResponseMessage.tsx  SubThoughtMessage.tsx  SystemMessage.tsx  ThinkingMessage.tsx  ThoughtMessage.tsx
alias/frontend/src/components/LoginModal/: index.module.scss  index.tsx
alias/frontend/src/components/LogoIcon/: index.tsx
alias/frontend/src/components/Roadmap/: index.module.scss  index.tsx
alias/frontend/src/components/SandBox/: index.module.scss  index.tsx
alias/frontend/src/components/ScrollToBottomButton/: index.module.scss  index.tsx
alias/frontend/src/components/ShareModal/: index.module.scss  index.tsx
alias/frontend/src/components/Viewer/: CSVViewer.tsx  ChartViewer.tsx  CodeViewer.tsx  DiffViewer.tsx  HtmlViewer.tsx  MarkdownViewer.module.scss  MarkdownViewer.tsx  UniversalViewer.tsx  index.tsx  styles.ts  types.ts  utils.ts
alias/frontend/src/components/Workspace/: index.module.scss  index.tsx
alias/frontend/src/context/: MessageContext.tsx  ThemeContext.tsx  WorkspaceContext.tsx
alias/frontend/src/interfaces/: index.ts
alias/frontend/src/pages/Chat/: index.module.scss  index.tsx  utils.ts
alias/frontend/src/pages/Login/: index.module.scss  index.tsx
alias/frontend/src/pages/SharePage/: index.module.scss  index.tsx
alias/frontend/src/routes/: index.tsx
alias/frontend/src/services/api/: conversation.ts  file.ts  habbit.ts  login.ts  request.ts
alias/frontend/src/services/types/: conversation.ts  login.ts
alias/frontend/src/styles/: global.css  global.scss  index.scss  tailwind.css  variables.scss
alias/frontend/src/types/: api.ts  message.ts  roadmap.ts  scss.d.ts  vite-env.d.ts
alias/frontend/src/utils/: classNames.ts  constant.ts  fileNameUtils.ts  sharedRefs.ts
alias/script/: migration.py  start_memory_service.sh  start_sandbox_server.sh
alias/src/alias/: __init__.py  cli.py
alias/src/alias/agent/: __init__.py  run.py
alias/src/alias/agent/agents/: __init__.py  _alias_agent_base.py  _browser_agent.py  _data_science_agent.py  _deep_research_agent_v2.py  _meta_planner.py  _react_worker.py
alias/src/alias/agent/memory/: longterm_memory.py  longterm_memory_utils.py
alias/src/alias/agent/mock/: __init__.py  mock_message_models.py  mock_session_service.py
alias/src/alias/agent/tools/: __init__.py  add_qa_tools.py  add_tools.py  alias_toolkit.py  sandbox_util.py  share_tools.py  tool_blacklist.py
alias/src/alias/agent/utils/: __init__.py  constants.py  send_msg.py
alias/src/alias/memory_service/: README.md  basememory.py  main.py  pyproject.toml  tool_memory.py  user_profiling_memory.py
alias/src/alias/memory_service/docker/: .env.example  Dockerfile  README.md  deploy.sh  docker-compose.yml  supervisord.conf
alias/src/alias/memory_service/docs/: API_DOCUMENTATION_EN.md
alias/src/alias/memory_service/memory_base/: base_vec_memory.py  candidate_pool.py  prompt.py  storage.py  userinfo_pool.py  userprofiling_pool.py
alias/src/alias/memory_service/models/: __init__.py  user_profiling.py
alias/src/alias/memory_service/profiling_utils/: __init__.py  logging_utils.py  memory_utils.py
alias/src/alias/memory_service/service/: README.md  __init__.py  pyproject.toml
alias/src/alias/runtime/: __init__.py
alias/src/alias/server/: _version.py  alembic.ini  main.py
evotraders/: .gitignore  .pre-commit-config.yaml  README.md  README_zh.md  env.template  pyproject.toml
evotraders/backend/: cli.py  main.py
evotraders/backend/agents/: __init__.py  analyst.py  portfolio_manager.py  prompt_loader.py  risk_manager.py
evotraders/backend/config/: constants.py  data_config.py  env_config.py
evotraders/backend/core/: __init__.py  pipeline.py  scheduler.py  state_sync.py
evotraders/backend/data/: __init__.py  cache.py  historical_price_manager.py  mock_price_manager.py  polling_price_manager.py  ret_data_updater.py  schema.py
evotraders/backend/llm/: models.py
evotraders/backend/services/: __init__.py  gateway.py  market.py  storage.py
evotraders/backend/tests/: test_agents.py  test_market_service.py  test_settlement.py
evotraders/backend/tools/: analysis_tools.py  data_tools.py
evotraders/backend/utils/: __init__.py  analyst_tracker.py  baselines.py  msg_adapter.py  progress.py  settlement.py  terminal_dashboard.py  trade_executor.py
evotraders/frontend/: .gitignore  README.md  env.template  index.html  package.json  tailwind.config.js  vite.config.js
evotraders/frontend/src/: App.jsx  main.jsx
evotraders/frontend/src/components/: AboutModal.jsx  AgentCard.jsx  AgentFeed.jsx  Header.jsx  MarkdownModal.jsx  NetValueChart.jsx  PerformanceView.jsx  RoomView.jsx  RulesView.jsx  StatisticsView.jsx  StockLogo.jsx
evotraders/frontend/src/config/: constants.js
evotraders/frontend/src/hooks/: useFeedProcessor.js
evotraders/frontend/src/services/: websocket.js
evotraders/frontend/src/styles/: GlobalStyles.jsx
evotraders/frontend/src/utils/: formatters.js  modelIcons.js
modelstudio_demos/mcp_server_with_chat/: README_en.md  README_zh.md  pyproject.toml  requirements.txt  setup.py
modelstudio_demos/mcp_server_with_chat/deploy_starter/: config.yml  main.py  mcp_server.py
(+269 files in other folders)
